# french_amendments_analysis

./: .gitignore  .gitlab-ci.yml  README.md  mkdocs.yml  pyproject.toml
amendements_analysis/application/: main.py  main_lm_model.py  main_model.py  main_prediction.py  main_presentation.py  results.py  streamlit_app.py
amendements_analysis/domain/: clusters_finder.py  fine_tune_lm.py  hug.py  lda_model.py  lm_training.py  run_pres.py  test.py  test_imdb.py  topic_finder.py  topic_predicter.py  tranformer_uploader.py
amendements_analysis/infrastructure/: building_dataset.py  download.py  sentence_encoding.py  test.py
amendements_analysis/settings/: base.py  utils.py
data/: .gitignore
data/interim/: .gitignore
data/raw/: .gitignore
docs/: index.md
docs/domain/: clusters_finder-reference.md  lda_model-reference.md  lm_training-reference.md  topic_finder-reference.md  topic_predicter-reference.md
docs/infrastructure/: building_dataset-reference.md
results/: .gitignore
results/models/: .gitignore
results/models/tmp_model/: sentencepiece.bpe.model
site/: 404.html  index.html
site/domain/: clusters_finder-reference.html  lda_model-reference.html  lm_training-reference.html  topic_finder-reference.html  topic_predicter-reference.html
site/infrastructure/: building_dataset-reference.html
site/search/: search_index.json
src/amendement_analysis/infrastructure/: load_json.py
tests/unit_tests/: test_sentence_encoding.py
