[tool.poetry]
name = "P2"
version = "0.1.0"
description = ""
authors = ["CET"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
scikit-learn = "^0.23.2"
wget = "^3.2"
tdqm = "^0.0.1"
Unidecode = "^1.1.1"
nltk = "^3.5"
spacy = "^2.3.4"
unicodedata2 = "^13.0.0"
umap-learn = "^0.4.6"
scikit-learn-extra = "^0.1.0-beta.2"
pyLDAvis = "^2.1.2"
streamlit = "^0.72.0"
numba = "0.48.0"
transformers = "^4.0.1"
tqdm = "^4.49"
torch = "^1.7.1"
datasets = "^1.1.3"
sentencepiece = "^0.1.94"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
[tool.poetry.dependencies.fr_core_news_md]
url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-2.3.0/fr_core_news_md-2.3.0.tar.gz"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
